# grate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  plot.py  viz.py
.github/workflows/: test.yml
data/: make-test-data.sh  multi.csv  rsviruses17900.10k.fastq.zst
paper/: benchmarking.md  f1a.csv  f1b.csv  ts1.csv
plot/: con.py  lenhist.py  minhist.py
src/: containment.rs  coverage.rs  filter.rs  index.rs  index_build.rs  index_diff.rs  index_format.rs  index_info.rs  index_union.rs  length.rs  lib.rs  main.rs  minimizers.rs
tests/: cli_tests.rs  filter_tests.rs  index_tests.rs  tests.rs
