[package]
name = "deacon"
version = "0.10.0"
description = "Fast DNA sequence filtering with minimizers"
authors = ["Bede Constantinides <b@bede.im>"]
edition = "2024"
repository = "https://github.com/bede/deacon"
homepage = "https://github.com/bede/deacon"
keywords = ["bioinformatics", "genomics", "filtering", "decontamination"]
categories = ["science", "command-line-utilities"]
license = "MIT"
exclude = ["bench/*", "data/*"]

[lib]
name = "deacon"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.1", features = ["zlib-rs"] }
anyhow = "1.0"
thiserror = "2.0"
simd-minimizers = "2.0"
packed-seq = "4.0"
rayon = "1"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
needletail = "0.6"
paraseq = "0.4"
parking_lot = "0.12"
zstd = "0.13"
indicatif = "0.17"
liblzma = "0.3.1"

[lints.clippy]
too_many_arguments = "allow"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.20"
rstest = "0.25"

[features]
# `deacon server` feature.
server = []
default = ["server"]

[[test]]
name = "cli_tests"
path = "tests/cli_tests.rs"

[[test]]
name = "index_tests"
path = "tests/index_tests.rs"

[[test]]
name = "filter_tests"
path = "tests/filter_tests.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = false
debug = false
